<resources>
    <string name="app_name">RMA Assistant</string>
    <string name="create_registry">Insert new product</string>
    <string name="show_all">Show all recorded products</string>
    <string name="expires_on">This warranty expires on</string>
    <string name="about">About</string>
    <string name="add_product">Add Product</string>
    <string name="delete_product">Delete product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_brand">Product Brand</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="warranty_time">Warranty Time (Months)</string>
    <string name="save">Save</string>
    <string name="add_occurrence">Add occurrence</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="invalid_input">Invalid Input!</string>
    <string name="unknow_error">Unknown Error, contact the developer!</string>
    <string name="title_activity_occurrence" translatable="false">OccurrenceActivity</string>
    <string name="occurrence_date">Occurrence Date</string>
    <string name="description_hint">Description (Optional)</string>
    <string name="occurrence_title">Occurrence Title</string>
    <string name="save_occurrence">Save Occurrence</string>
    <string name="delete_occurrence">Delete Occurrence</string>
    <string name="open_occurrences">Open Occurrences</string>
    <string name="manage_product">Manage Product</string>
    <string name="manage_occurrence">Manage Occurrence</string>
    <string name="invoice_image">Invoice Image</string>
    <string name="product_image">Product Image</string>
    <string name="delete_confirm_message">Do you really wish to delete the selected item(s)? This action can\'t be undone!</string>
    <string name="delete_itens">Delete items!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_app">Application to help you manage the  warranty time of your devices, the app also supports the storage of pictures of their invoice, and also gives a way to track possible \"occurrences\" with them.</string>
    <string name="author">Author :</string>
    <string name="author_ra">Author\'s RA :</string>
    <string name="author_course">Author\'s Course :</string>
    <string name="gabriel_de_abreu" translatable="false">Gabriel de Abreu</string>
    <string name="ra_number" translatable="false">1581678</string>
    <string name="computer_engineering">Computer Engineering</string>
    <string name="available_themes">Change your theme by clicking in a color!</string>
    <string name="delete_this_product">Are you sure you want to delete this PRODUCT?</string>
    <string name="image_compression">Choose the image compression level, the higher, the ligther the app will be, however the images\' quality will be reduced!</string>
    <string name="compression_level">Compression level:</string>
    <string name="product_info_message">You can start by adding a product clicking in the \"+\" sign in the top bar!</string>
    <string name="occurrence_info_message">You can add an occurrence by clicking in the floating button at the bottom of the screen!</string>
</resources>
