<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/editProductOccurrenceMenuItem"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_product"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/deleteProductOccurrenceMenuItem"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_product"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/aboutMenuItemOccurrence"
        android:enabled="true"
        android:title="@string/about"
        android:visible="true" />
</menu>